--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
+    "@ant-design/icons": "^5.6.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/system": "^7.0.2",
+    "antd": "^5.25.0",
+    "axios": "^1.9.0",
+    "echarts": "^5.6.0",
+    "immer": "^10.1.1",
+    "lodash": "^4.17.21",
+    "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.17"
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
