--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "antd": "^5.25.0",
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
+    "fuse.js": "^7.1.0",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "next": "14.2.17",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "swr": "^2.3.3"
   },
