--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "@mui/system": "^7.0.2",
     "antd": "^5.25.0",
     "axios": "^1.9.0",
+    "d3": "^7.9.0",
     "echarts": "^5.6.0",
     "fuse.js": "^7.1.0",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "molstar": "^4.18.0",
     "next": "14.2.17",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
+    "react-intersection-observer": "^9.16.0",
+    "sass": "^1.89.2",
     "swr": "^2.3.3"
   },
   "devDependencies": {
