--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/system": "^7.0.2",
     "antd": "^5.25.0",
     "axios": "^1.9.0",
+    "canvg": "^4.0.3",
     "d3": "^7.9.0",
     "echarts": "^5.6.0",
     "fuse.js": "^7.1.0",
+    "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "molstar": "^4.18.0",
