--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-intersection-observer": "^9.16.0",
     "sass": "^1.89.2",
     "swr": "^2.3.3",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
