--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-intersection-observer": "^9.16.0",
+    "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.89.2",
     "swr": "^2.3.3",
     "uuid": "^11.1.0",
