--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "molstar": "^4.18.0",
     "next": "14.2.17",
