--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-intersection-observer": "^9.16.0",
+    "react-slick": "^0.31.0",
     "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.89.2",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.3.3",
     "uuid": "^11.1.0",
     "zustand": "^5.0.6"
